--- a/styles/partials/_mixins.scss
+++ b/styles/partials/_mixins.scss
@@ -4,7 +4,7 @@
         @media (max-width: 767px) { @content; }
       }
       @mixin for--tablet {
-        @media (min-width: 768px) and (max-width: 1279px) { @content; }
+        @media (min-width: 768px)  { @content; }
       }
       @mixin for--desktop {
         @media (min-width: 1280px) { @content; }
