--- a/styles/shows.css
+++ b/styles/shows.css
@@ -61,6 +61,7 @@
 
 .show {
   transition: ease-in-out 1s;
+  border-bottom: 1px solid #000;
 }
 @media (min-width: 768px) {
   .show {
@@ -106,7 +107,7 @@
 
 .shows-container {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-between;
   align-items: flex-end;
   margin: 0 20px;
@@ -186,4 +187,42 @@
   width: 300%;
   border-bottom: 1px solid black;
   margin-bottom: 10px;
+}
+
+@media (max-width: 700px) {
+  .mobile .show-mobile {
+    display: flex;
+    flex-direction: column;
+    padding: 20px;
+    border: 1px solid #ccc;
+    margin-bottom: 20px;
+    position: relative;
+  }
+  .mobile .show-mobile::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 1px;
+    background-color: #ccc;
+  }
+  .mobile .show-mobile .show-date {
+    font-size: 18px;
+    font-weight: 700;
+    color: #f4f4f4;
+    margin-bottom: 10px;
+  }
+  .mobile .show-mobile .show-divider {
+    margin: 10px 0;
+  }
+  .mobile .show-mobile .show-venue,
+  .mobile .show-mobile .show-location {
+    font-size: 16px;
+    color: #fff;
+    margin-bottom: 10px;
+  }
+  .mobile .show-mobile button {
+    margin-top: auto;
+  }
 }/*# sourceMappingURL=shows.css.map */
