feature | included new color

--- a/styles/partials/_variables.scss
+++ b/styles/partials/_variables.scss
@@ -12,5 +12,7 @@ $after__headline-components: 2.25rem;
 //paddings_mobile
 $before__headline-mobile: 1.5rem;
 $after__headline-components-mobile: 1rem;
+// new section colors
+$secondary__band-error: #d22d2d;
 
 
